<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/emailEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.4"
            app:layout_constraintHorizontal_bias="0.502"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditTExt"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/emailEditText"/>

    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:background="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTExt"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditTExt" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTExt"/>
</android.support.constraint.ConstraintLayout>