<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/registerEmailEditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.35000002"
            app:layout_constraintHorizontal_bias="0.502"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPasswordEditText"
            app:layout_constraintStart_toStartOf="@+id/registerEmailEditText"
            app:layout_constraintEnd_toEndOf="@+id/registerEmailEditText"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText"/>

    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/registerPasswordEditText"
            app:layout_constraintEnd_toEndOf="@+id/registerPasswordEditText"
            style="@style/Widget.AppCompat.Button.Borderless" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText"/>
</android.support.constraint.ConstraintLayout>