<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.admin.addlaunch.AddLaunchActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/longitude"
            android:id="@+id/add_launch_longitude_edit_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.26999998"
            android:inputType="numberDecimal"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/latitude"
            android:ems="10"
            android:id="@+id/add_launch_latitude_edit_text"
            app:layout_constraintStart_toStartOf="@+id/add_launch_longitude_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/add_launch_longitude_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_launch_longitude_edit_text"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/add_launch_name_edit_text"
            android:hint="@string/name"
            app:layout_constraintStart_toStartOf="@+id/add_launch_latitude_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/add_launch_latitude_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/add_launch_latitude_edit_text"/>
    <Button
            android:text="Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_launch_button" app:layout_constraintStart_toStartOf="@+id/add_launch_name_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/add_launch_name_edit_text"
            style="@style/Widget.AppCompat.Button.Colored" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/add_launch_name_edit_text"/>
</android.support.constraint.ConstraintLayout>