<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weather_description_text_view" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            tools:text="Weather Description" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_humidity_text_view"
            app:layout_constraintStart_toStartOf="@+id/weather_description_text_view"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/weather_description_text_view"/>
    <TextView
            android:text="@string/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_wind_speed_text_view"
            app:layout_constraintStart_toStartOf="@+id/weather_humidity_text_view"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/weather_humidity_text_view"/>
    <TextView
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_humidity_value_text_value"
            app:layout_constraintTop_toTopOf="@+id/weather_humidity_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/weather_humidity_text_view"
            app:layout_constraintStart_toEndOf="@+id/weather_humidity_text_view" android:layout_marginStart="88dp"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_wind_speed_value_text_view"
            app:layout_constraintTop_toTopOf="@+id/weather_wind_speed_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/weather_wind_speed_text_view"
            app:layout_constraintStart_toStartOf="@+id/weather_humidity_value_text_value"
    />
    <TextView
            android:text="@string/max_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_min_temp_text_view"
            app:layout_constraintStart_toStartOf="@+id/weather_wind_speed_text_view"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/weather_wind_speed_text_view"/>
    <TextView
            android:text="@string/min_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_max_temp_text_view"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/weather_min_temp_text_view"
            app:layout_constraintStart_toStartOf="@+id/weather_min_temp_text_view"/>
    <TextView
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_max_temp_value_text_view"
            app:layout_constraintTop_toTopOf="@+id/weather_min_temp_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/weather_min_temp_text_view"
            app:layout_constraintStart_toStartOf="@+id/weather_wind_speed_value_text_view"
    />
    <TextView
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weather_min_temp_value_text_view"
            app:layout_constraintStart_toStartOf="@+id/weather_max_temp_value_text_view"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/weather_max_temp_value_text_view"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weather_recommendation_text_view" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            tools:text="Bad weather conditions. We dont recommend launching today" android:textSize="24sp"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/weather_min_temp_value_text_view"
            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center" android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>