<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/new_launch_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_launch_text_view" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.245" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAlignment="center" android:textSize="16sp" app:layout_constraintHorizontal_bias="1.0"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical" app:layout_constraintGuide_end="336dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="337dp"
                                          android:orientation="vertical"/>
    <Button
            android:text="@string/check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_launch_check_button"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/new_launch_text_view"/>
    <TextView
            android:text="@string/new_launch_result_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_launch_result_text_view" app:layout_constraintStart_toStartOf="@+id/new_launch_check_button"
            app:layout_constraintEnd_toEndOf="@+id/new_launch_check_button" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/new_launch_check_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textAlignment="center"
            android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>